first commit services section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/styles.css" />
-
     <title>Ayush Kumar</title>
   </head>
   <body>
@@ -287,7 +286,192 @@
       </section>
 
       <!--=============== SERVICES ===============-->
-      <section class="services section"></section>
+      <section class="services section">
+        <span class="section__subtitle">My Services</span>
+        <h2 class="section__title">What I offer</h2>
+
+        <div class="services__container container grid">
+          <div class="services__card">
+            <h3 class="services__title">
+              Frontend <br />
+              Development
+            </h3>
+
+            <span class="services__button">
+              see more <i class="bx bx-right-arrow-alt services__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <i class="bx bx-x services__modal-close"></i>
+
+                <h3 class="services__modal-title">
+                  Frontend <br />
+                  Development
+                </h3>
+                <p class="services__modal-description">
+                  Providing quality work to clients and companies.
+                </p>
+
+                <ul class="services__modal-list">
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I develop the user interface.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">Web page development.</p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I create ux element interactions.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I position your company brand.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      Design and mockups of products for companies.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="services__card">
+            <h3 class="services__title">
+              Video <br />
+              Editing
+            </h3>
+
+            <span class="services__button">
+              see more <i class="bx bx-right-arrow-alt services__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <i class="bx bx-x services__modal-close"></i>
+
+                <h3 class="services__modal-title">
+                  Video <br />
+                  Editing
+                </h3>
+                <p class="services__modal-description">
+                  Providing quality work to clients and companies.
+                </p>
+
+                <ul class="services__modal-list">
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I develop the user interface.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">Web page development.</p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I create ux element interactions.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I position your company brand.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      Design and mockups of products for companies.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="services__card">
+            <h3 class="services__title">
+              Ui/Ux <br />
+              Designer
+            </h3>
+
+            <span class="services__button">
+              see more <i class="bx bx-right-arrow-alt services__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <i class="bx bx-x services__modal-close"></i>
+
+                <h3 class="services__modal-title">
+                  Ui/Ux <br />
+                  Designer
+                </h3>
+                <p class="services__modal-description">
+                  Providing quality work to clients and companies.
+                </p>
+
+                <ul class="services__modal-list">
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I develop the user interface.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">Web page development.</p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I create ux element interactions.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      I position your company brand.
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__icon"></i>
+                    <p class="services__modal-info">
+                      Design and mockups of products for companies.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--=============== WORK ===============-->
       <section class="work section" id="work"></section>
