--- a/index.html
+++ b/index.html
@@ -474,7 +474,64 @@
       </section>
 
       <!--=============== WORK ===============-->
-      <section class="work section" id="work"></section>
+      <section class="work section" id="work">
+        <span class="section__subtitle">My Portfolio</span>
+        <h2 class="section__title">Recent Works</h2>
+
+        <div class="work__filters">
+          <span class="work__item active-work" data-filter=".all">All</span>
+          <span class="work__item" data-filter=".web">Web</span>
+          <span class="work__item" data-filter=".editing">Editing</span>
+          <span class="work__item" data-filter=".amv">AMV Edit's</span>
+        </div>
+
+        <div class="work__container continer grid">
+          <div class="work__card">
+            <img src="assets/img/WebDevImg.png" alt="" class="work__img" />
+
+            <h3 class="work__title">Web design</h3>
+            <a href="#" class="work__button">
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/257904.jpg" alt="" class="work__img" />
+
+            <h3 class="work__title">Editing</h3>
+            <a href="#" class="work__button">
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/maxresdefault.jpg" alt="" class="work__img" />
+
+            <h3 class="work__title">AMV Edits</h3>
+            <a href="#" class="work__button">
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/WebDevImg.png" alt="" class="work__img" />
+
+            <h3 class="work__title">Web design</h3>
+            <a href="#" class="work__button">
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+
+          <div class="work__card">
+            <img src="assets/img/257904.jpg" alt="" class="work__img" />
+
+            <h3 class="work__title">Editing</h3>
+            <a href="#" class="work__button">
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+        </div>
+      </section>
 
       <!--=============== TESTIMONIALS ===============-->
       <section class="testimonial section"></section>
@@ -493,7 +550,7 @@
     <script src=""></script>
 
     <!--=============== MIXITUP FILTER ===============-->
-    <script src=""></script>
+    <script src="assets/js/mixitup.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="./assets/js/main.js"></script>
