--- a/index.html
+++ b/index.html
@@ -479,14 +479,14 @@
         <h2 class="section__title">Recent Works</h2>
 
         <div class="work__filters">
-          <span class="work__item active-work" data-filter=".all">All</span>
+          <span class="work__item active-work" data-filter="all">All</span>
           <span class="work__item" data-filter=".web">Web</span>
           <span class="work__item" data-filter=".editing">Editing</span>
           <span class="work__item" data-filter=".amv">AMV Edit's</span>
         </div>
 
         <div class="work__container continer grid">
-          <div class="work__card">
+          <div class="work__card mix web">
             <img src="assets/img/WebDevImg.png" alt="" class="work__img" />
 
             <h3 class="work__title">Web design</h3>
@@ -495,7 +495,7 @@
             </a>
           </div>
 
-          <div class="work__card">
+          <div class="work__card mix editing">
             <img src="assets/img/257904.jpg" alt="" class="work__img" />
 
             <h3 class="work__title">Editing</h3>
@@ -504,7 +504,7 @@
             </a>
           </div>
 
-          <div class="work__card">
+          <div class="work__card mix amv">
             <img src="assets/img/maxresdefault.jpg" alt="" class="work__img" />
 
             <h3 class="work__title">AMV Edits</h3>
@@ -513,7 +513,7 @@
             </a>
           </div>
 
-          <div class="work__card">
+          <div class="work__card mix web">
             <img src="assets/img/WebDevImg.png" alt="" class="work__img" />
 
             <h3 class="work__title">Web design</h3>
@@ -522,7 +522,7 @@
             </a>
           </div>
 
-          <div class="work__card">
+          <div class="work__card mix editing">
             <img src="assets/img/257904.jpg" alt="" class="work__img" />
 
             <h3 class="work__title">Editing</h3>
@@ -537,7 +537,85 @@
       <section class="testimonial section"></section>
 
       <!--=============== CONTACT ===============-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <span class="section__subtitle">Get in touch</span>
+        <h2 class="section__title">Contact Me</h2>
+
+        <div class="contact__container container grid">
+          <div class="class__content">
+            <h3 class="contact__title">Talk to me</h3>
+
+            <div class="contact__info">
+              <div class="contact__card">
+                <i class="bx bx-mail-send contact__card-icon"></i>
+                <h3 class="contact__card-title">Email</h3>
+                <span class="contact__card-data">akayushkumar03@gmail.com</span>
+
+                <a
+                  href="mailto:akayushkumar03@gmail.com"
+                  target="_blank"
+                  class="contact__button"
+                >
+                  Write me
+                  <i class="bx bx-right-arrow-alt contact__button-icon"></i>
+                </a>
+              </div>
+
+              <div class="contact__card">
+                <i class="bx bxl-whatsapp contact__card-icon"></i>
+                <h3 class="contact__card-title">Whatsapp</h3>
+                <span class="contact__card-data">7019950419</span>
+
+                <a
+                  href="https://api.whatsapp.com/send?phone=+917019950419&text=Hello, more information!"
+                  target="_blank"
+                  class="contact__button"
+                >
+                  Write me
+                  <i class="bx bx-right-arrow-alt contact__button-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="class__content">
+            <h3 class="contact__title">Write me your project</h3>
+
+            <form action="" class="contact__form">
+              <div class="contact__form-div">
+                <label for="" class="contact__form-tag">Name</label>
+                <input
+                  type="text"
+                  placeholder="Insert your name"
+                  class="contact__form-input"
+                />
+              </div>
+
+              <div class="contact__form-div">
+                <label for="" class="contact__form-tag">Mail</label>
+                <input
+                  type="email"
+                  placeholder="Insert your email"
+                  class="contact__form-input"
+                />
+              </div>
+
+              <div class="contact__form-div contact__foram-area">
+                <label for="" class="contact__form-tag">Project</label>
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  placeholder="Write your project"
+                  class="contact__form-input"
+                ></textarea>
+              </div>
+
+              <button class="button">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=============== FOOTER ===============-->
