--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="about__box">
                 <i class="bx bx-award about__icon"></i>
                 <h3 class="about__title">Experience</h3>
-                <span class="about__subtitle">Not much of Experience</span>
+                <span class="about__subtitle">Fresher</span>
               </div>
 
               <div class="about__box">
@@ -210,7 +210,7 @@
 
                   <div>
                     <h3 class="skills__name">Bootstrap</h3>
-                    <span class="skills__level">Intermediat</span>
+                    <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
 
@@ -274,7 +274,7 @@
 
                   <div>
                     <h3 class="skills__name">MySQL</h3>
-                    <span class="skills__level">Intermediat</span>
+                    <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
 
