--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
             </div>
 
             <p class="about__description">
-              Frontend developer, I create web pages with UI / UX user
-              interface, I have years of experience and many clients are happy
-              with the projects carried out.
+              As a frontend developer and video editor, I bring a unique blend of technical expertise and creative vision to every project.
+              I utilize my skills in programming languages, frameworks, and design tools to create stunning and user-friendly digital experiences.
             </p>
 
             <a href="#contact" class="button">Contact Me</a>
