--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="home__buttons">
               <a
-                href="./assets/pdf/Ayush's_Resume.pdf"
+                href="./assets/pdf/Ayush's_Resume for portfolio.pdf"
                 class="button button--ghost"
               >
                 Download Resume
