--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
           </div>
 
-<!--           <div class="skills__content">
+          <div class="skills__content">
             <h3 class="skills__title">Backend Developer</h3>
 
             <div class="skills__box">
@@ -287,7 +287,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
 
